# CG-OpenGL-Lab09

./: CMakeLists.txt
Shaders/: shader.frag  shader.vert
src/: main.cpp
src/Libs/: Mesh.cpp
